--- a/app/views/salesPage.scala.html
+++ b/app/views/salesPage.scala.html
@@ -16,6 +16,12 @@
 
     </head>
     <body>
+        @if(!(login.isEmpty)) {
+            <div align="right">
+                Вы вошли как :@login
+                <br>
+            </div>
+        }
         <div align="center">
             <h2>Barton & Guestier</h2>
 
