--- a/app/views/favoritePage.scala.html
+++ b/app/views/favoritePage.scala.html
@@ -338,7 +338,7 @@
                                                             <br>
 
                                                             @if(item.isAddingToBasket(item.getIdProduct,login)!=login){
-                                                                <p text-align="left">Добавлен в корзину.</p>
+                                                                <p text-align="left"  style="color: blue">Добавлен в корзину.</p>
                                                             }
 
                                                         }
