--- a/public/stylesheets/startPage.css
+++ b/public/stylesheets/startPage.css
@@ -285,6 +285,8 @@ H1 {
     width: 100%;
     height: 40px;
     positon: relative;
+    text-align: center;
+
     margin-top: 7px;
     font-size: 14px;
     color: #444;
